# SVP

FileManager1/: CMakeLists.txt
FileManager1/FileManager1/src/: filemanager.cpp  mainwindow.h
FileManager1/FileManager1/tests/: CMakeLists.txt
FileManager1/FileManager1/tests/tests_src/: test.h
FileManager1/src/: filemanager.h  mainwindow.cpp
FileManager1/tests/tests_src/: test.cpp
kurs/: filemanager.cpp  filemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/tests_src/: main.cpp
